Adjust css to prevent icons growing and allow ... overflow

--- a/resources/public/css/checkbox-tree.css
+++ b/resources/public/css/checkbox-tree.css
@@ -1,18 +1,6 @@
 .react-checkbox-tree {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
-  font-size: 16px;
-}
-
-.react-checkbox-tree > ol {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+  flex-direction: column;
 }
 
 .react-checkbox-tree ol {
@@ -21,8 +9,8 @@
   list-style-type: none;
 }
 
-.react-checkbox-tree ol ol {
-  padding-left: 24px;
+.react-checkbox-tree ol ol li {
+  padding-left: 18px;
 }
 
 .react-checkbox-tree button {
@@ -47,14 +35,6 @@
   cursor: pointer;
 }
 
-.react-checkbox-tree label:hover {
-  background: rgba(51, 51, 204, 0.1);
-}
-
-.react-checkbox-tree label:active {
-  background: rgba(51, 51, 204, 0.15);
-}
-
 .react-checkbox-tree:not(.rct-native-display) input {
   display: none;
 }
@@ -67,7 +47,7 @@
   display: inline-block;
   text-align: center;
   text-rendering: auto;
-  font-family: "Font Awesome 5 Free", "FontAwesome", sans-serif;
+  font-family: "FontAwesome", sans-serif;
   font-weight: normal;
   font-style: normal;
   font-variant: normal;
@@ -87,18 +67,26 @@
 }
 
 .rct-text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  height: 2em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-top: 0.5em;
+}
+
+.rct-text:hover {
+  background: rgba(255, 255, 255, 0.06);
+}
+
+.rct-text:active {
+  background: rgba(255, 255, 255, 0.08);
 }
 
 .rct-options {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 auto;
-          flex: 0 0 auto;
+  flex: 0 0 auto;
   margin-left: .5rem;
   text-align: right;
 }
@@ -123,7 +111,7 @@
 .rct-collapse,
 .rct-checkbox,
 .rct-node-icon {
-  padding: 0 5px;
+  padding-right: 5px;
 }
 
 .rct-collapse *,
@@ -131,7 +119,6 @@
 .rct-node-icon * {
   display: inline-block;
   margin: 0;
-  width: 14px;
 }
 
 .rct-collapse {
@@ -144,6 +131,11 @@
 
 .rct-collapse.rct-collapse-btn {
   cursor: pointer;
+  width: 22px;
+}
+
+.rct-collapse > .rct-icon-expand-open {
+  margin-left: -1px;
 }
 
 .rct-collapse > .rct-icon-expand-close {
@@ -162,21 +154,14 @@
   cursor: pointer;
 }
 
-.rct-node-clickable:hover {
-  background: rgba(51, 51, 204, 0.1);
-}
-
-.rct-node-clickable:focus {
-  outline: 0;
-  background: rgba(51, 51, 204, 0.2);
+.rct-title {
+  padding: 0 5px;
+  text-overflow: ellipsis;
 }
 
 .rct-node-icon {
-  color: #33c;
-}
-
-.rct-title {
-  padding: 0 5px;
+  display: inline-block;
+  padding-left: 1px;
 }
 
 .rct-icons-fa4 .rct-icon-expand-close::before {
@@ -185,6 +170,16 @@
 
 .rct-icons-fa4 .rct-icon-expand-open::before {
   content: "\f078";
+}
+
+.rct-icons-fa4 .rct-icon-uncheck::before,
+.rct-icons-fa4 .rct-icon-check::before,
+.rct-icons-fa4 .rct-icon-half-check::before,
+.rct-icons-fa4 .rct-icon-leaf::before {
+  display: inline-block;
+  overflow: hidden;
+  vertical-align: bottom;
+  width: 14px;
 }
 
 .rct-icons-fa4 .rct-icon-uncheck::before {
@@ -201,7 +196,9 @@
 }
 
 .rct-icons-fa4 .rct-icon-leaf::before {
-  content: "\f016";
+  padding-left: 1px;
+  margin-right: -1px;
+  content: "\f126";
 }
 
 .rct-icons-fa4 .rct-icon-parent-open::before {
@@ -217,48 +214,5 @@
 }
 
 .rct-icons-fa4 .rct-icon-collapse-all::before {
-  content: "\f146";
-}
-
-.rct-icons-fa5 .rct-icon-expand-close::before {
-  font-weight: 900;
-  content: "\f054";
-}
-
-.rct-icons-fa5 .rct-icon-expand-open::before {
-  font-weight: 900;
-  content: "\f078";
-}
-
-.rct-icons-fa5 .rct-icon-uncheck::before {
-  content: "\f0c8";
-}
-
-.rct-icons-fa5 .rct-icon-check::before {
-  content: "\f14a";
-}
-
-.rct-icons-fa5 .rct-icon-half-check::before {
-  opacity: .5;
-  content: "\f14a";
-}
-
-.rct-icons-fa5 .rct-icon-leaf::before {
-  content: "\f15b";
-}
-
-.rct-icons-fa5 .rct-icon-parent-open::before {
-  content: "\f07c";
-}
-
-.rct-icons-fa5 .rct-icon-parent-close::before {
-  content: "\f07b";
-}
-
-.rct-icons-fa5 .rct-icon-expand-all::before {
-  content: "\f0fe";
-}
-
-.rct-icons-fa5 .rct-icon-collapse-all::before {
   content: "\f146";
 }
